--- a/static/css/portfolio.css
+++ b/static/css/portfolio.css
@@ -127,12 +127,12 @@ main a {
 }
 
 #m-wrapper {
-  height: 1000px;
+  height: 1400px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  margin-top: 15%;
-  margin-bottom: 15%;
+  justify-content: space-around;
+  margin-top: 5%;
+  margin-bottom: 5%;
   margin-left: 5%;
   margin-right: 5%;
 }
@@ -180,9 +180,8 @@ footer p {
 }
 
 #bottom-nav li a:hover {
-  border-bottom: 3px solid white;
   transition: all 0.2s ease;
-  text-shadow: 0 0 30px #fff;
+  text-shadow: 0 0 50px #fff;
 }
 
 #bottom-social-nav {
